test/oscar/compiler/errors/mutImmutDecl.oscar
message testNow()


actor Tester() {
  mut int x = 1;
  int x = 2;
  
  receive = {
    | testNow() => {}
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>() |> tester;
}